<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.StartFragment">

    <TextView
        android:id="@+id/tv_wifi_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_start_end_message"
        android:layout_marginStart="@dimen/margin_start_end_message"
        android:layout_marginTop="@dimen/margin_top_elements"
        android:text="@string/message_wifi_connected"
        android:textColor="@android:color/primary_text_light"
        android:textSize="@dimen/size_description_text"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_create_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_label_create_chat"
        app:layout_constraintBottom_toTopOf="@+id/btn_join_chat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btn_join_chat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/btn_label_join_chat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_create_chat"
        app:layout_constraintStart_toStartOf="@+id/btn_create_chat"
        app:layout_constraintTop_toBottomOf="@+id/btn_create_chat" />

</android.support.constraint.ConstraintLayout>